# pbcore-util

./: .gitignore  Dockerfile  README.md  conftest.py  convert.ipynb  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt  schema.ipynb
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: CI.yml
app/: main.py
pbcore/: __init__.py
pbcore/models/: __init__.py  assets.py  base.py  essence.py  extension.py  instantiations.py  models.py  rights.py  root.py
schemas/: pbcore.schema.json
stylesheets/: pbcore-xml-to-json.xsl
test/: test_main.py
test/data/pbcore_xml/: 102-021c5bmn.xml  102-085hqcrv.xml  102-150gb79s.xml  102-23hx3hqp.xml  102-36tx99x8.xml  102-375tb68n.xml  102-56n0313s.xml  102-63fxpvj0.xml  102-784j16v4.xml  102-977sr4tc.xml  109-23612mwf.xml  109-50gtj081.xml  109-67wm3ftr.xml  110-09w0vvqg.xml  110-09w0vvsx.xml  110-12z34vr4.xml  110-18rbp1n1.xml  110-4298skmp.xml  110-43nvx5cx.xml  110-515mks24.xml  110-655dvc23.xml  110-65h9w78b.xml  110-79573wm7.xml  110-79h44st5.xml  110-82k6dt4p.xml  110-93gxdc42.xml  110-956djt5g.xml  110-95w6mmph.xml  111-03cz8zcw.xml  111-20fttjtk.xml  111-20fttjw1.xml  111-22h70xdg.xml  111-27mpg92k.xml  111-504xh50v.xml  111-558czk0t.xml  111-76rxwqk9.xml  111-90dv4cxv.xml  113-03qv9x64.xml  113-053ffg55.xml  113-17qnkgnt.xml  (+960 more)
tests/: test_main.py  test_pbcore_assets.py  test_pbcore_schema.py
tests/sample_data/pbcore_xml/: 100-009w0w2t.invalid_coverage_type.xml  100-009w0w2t.xml  all_roles.xml  multiple_repeatable_elements.xml  single_repeatable_elements.xml  (+4 more)
